# crm_crud_app

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  env.example  env.test  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy_prod.yaml
src/api/: __init__.py  customers.py  orders.py  payments.py
src/core/: config.py  logger.py
src/schemas/: __init__.py  customers.py  orders.py  payments.py
src/services/integrations/: __init__.py  base_crm.py  constants_base.py
src/services/integrations/retail_crm/: __init__.py  api_service.py  constants.py
tests/: test_customers_schema.py  test_make_request.py  test_retailcrm_service.py
