[project]
name = "crm-crud-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "uvicorn>=0.38.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.22.0",
    "pytest-dotenv>=0.5",
]


[tool.mypy]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
